--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ openai = "^1.35.7"
 pytest = "^8.1.1"
 python-levenshtein = "^0.25.0"
 mypy = "^1.9.0"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -60,3 +61,8 @@ disallow_untyped_defs = true
 init_forbid_extra = true
 init_typed = true
 warn_required_dynamic_aliases = true
+
+[tool.pytest.ini_options]
+markers = [
+    "sequential: mark test to run sequentially for specific parameters"
+]
