--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "modelsmith"
-version = "0.4.2"
+version = "0.5.0"
 description = "Get Pydantic models and Python types as LLM responses from Google Vertex AI models."
 authors = ["Christo Olivier <mail@christoolivier.com>"]
 maintainers = ["Christo Olivier <mail@christoolivier.com>"]
@@ -17,11 +17,13 @@ tenacity = "^8.2.3"
 google-cloud-aiplatform = "^1.43.0"
 pydantic = "^2.6.4"
 jinja2 = "^3.1.3"
+openai = "^1.35.7"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
 python-levenshtein = "^0.25.0"
 mypy = "^1.9.0"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -59,3 +61,8 @@ disallow_untyped_defs = true
 init_forbid_extra = true
 init_typed = true
 warn_required_dynamic_aliases = true
+
+[tool.pytest.ini_options]
+markers = [
+    "sequential: mark test to run sequentially for specific parameters"
+]
