--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "modelsmith"
-version = "0.5.0"
+version = "0.6.0"
 description = "Get Pydantic models and Python types as LLM responses from Google Vertex AI and OpenAI models."
 authors = ["Christo Olivier <mail@christoolivier.com>"]
 maintainers = ["Christo Olivier <mail@christoolivier.com>"]
@@ -18,6 +18,7 @@ google-cloud-aiplatform = "^1.43.0"
 pydantic = "^2.6.4"
 jinja2 = "^3.1.3"
 openai = "^1.35.7"
+anthropic = "^0.30.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
