Updated pyproject.toml documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["Christo Olivier <mail@christoolivier.com>"]
 maintainers = ["Christo Olivier <mail@christoolivier.com>"]
 homepage = "https://github.com/christo-olivier/modelsmith"
 repository = "https://github.com/christo-olivier/modelsmith"
-keywords = ["vertexai", "pydantic", "models", "types", "llm"]
+documentation = "https://christo-olivier.github.io/modelsmith"
+keywords = ["anthropic", "openai", "vertexai", "pydantic", "models", "types", "llm"]
 license = "MIT"
 readme = "README.md"
 packages = [{include = "modelsmith", from = "src"}]
