--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,48 @@
-[tool.poetry]
+[project]
 name = "modelsmith"
-version = "0.6.1"
+version = "0.7.0"
 description = "Get Pydantic models and Python types as LLM responses from Anthropic, Google Vertex AI, and OpenAI models."
-authors = ["Christo Olivier <mail@christoolivier.com>"]
-maintainers = ["Christo Olivier <mail@christoolivier.com>"]
-homepage = "https://github.com/christo-olivier/modelsmith"
-repository = "https://github.com/christo-olivier/modelsmith"
-documentation = "https://christo-olivier.github.io/modelsmith"
-keywords = ["anthropic", "openai", "vertexai", "pydantic", "models", "types", "llm"]
-license = "MIT"
+authors = [{ name = "Christo Olivier", email = "mail@christoolivier.com" }]
+requires-python = "~=3.10.0"
 readme = "README.md"
-packages = [{include = "modelsmith", from = "src"}]
+license = "MIT"
+maintainers = [{ name = "Christo Olivier", email = "mail@christoolivier.com" }]
+keywords = [
+    "anthropic",
+    "openai",
+    "vertexai",
+    "pydantic",
+    "models",
+    "types",
+    "llm",
+]
+dependencies = [
+    "google-genai>=1.36.0",
+    "anthropic>=0.67.0",
+    "openai>=1.107.2",
+    "jinja2>=3.1.6",
+    "pydantic>=2.11.9",
+    "tenacity>=9.1.2",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-tenacity = "^8.2.3"
-google-cloud-aiplatform = "^1.43.0"
-pydantic = "^2.6.4"
-jinja2 = "^3.1.3"
-openai = "^1.35.7"
-anthropic = "^0.30.1"
+[project.urls]
+Homepage = "https://github.com/christo-olivier/modelsmith"
+Repository = "https://github.com/christo-olivier/modelsmith"
+Documentation = "https://christo-olivier.github.io/modelsmith"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.1.1"
-python-levenshtein = "^0.25.0"
-mypy = "^1.9.0"
-python-dotenv = "^1.0.1"
-mkdocs = "^1.6.0"
-mkdocs-material = "^9.5.29"
-mike = "^2.1.2"
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "mypy>=1.18.1",
+    "python-dotenv>=1.1.1",
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.19",
+    "mike>=2.1.3",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["uv_build>=0.8.17,<0.9.0"]
+build-backend = "uv_build"
 
 [tool.ruff.lint]
 select = [
